// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`MongodbInstance "_launchMongod" should throw an error if "mongodProcess.pid" is undefined 1`] = `"{\\"binary\\":\\"/tmp/thisShouldNotExist\\"}"`;

exports[`MongodbInstance prepareCommandArgs should throw an error if no dbpath is provided 1`] = `"\\"instanceOpts.dbPath\\" is required to be set!"`;

exports[`MongodbInstance prepareCommandArgs should throw an error if no port is provided 1`] = `"\\"instanceOpts.port\\" is required to be set!"`;

exports[`MongodbInstance test events "start" should emit a "instanceError" when timeout is reached and throw a error 1`] = `"Instance failed to start within 1000ms"`;

exports[`MongodbInstance test events checkErrorInLine() should emit "instanceError" when shared libraries fail to load 1`] = `"Instance failed to start because a library is missing or cannot be opened: \\"libcrypto.so.1.1\\""`;

exports[`MongodbInstance test events closeHandler() "closeHandler" should emit "instanceError" with vc_redist helper message on windows on high exit code 1`] = `
"Instance closed unexpectedly with code \\"3221225785\\" and signal \\"null\\"
Exit Code is large, commonly meaning that vc_redist is not installed, the latest vc_redist can be found at https://learn.microsoft.com/en-us/cpp/windows/latest-supported-vc-redist?view=msvc-170"
`;

exports[`MongodbInstance test events closeHandler() should emit "instanceClosed" 1`] = `"Instance closed unexpectedly with code \\"null\\" and signal \\"SIG\\""`;

exports[`MongodbInstance test events closeHandler() should emit "instanceError" with extra information on "SIGILL" 1`] = `
"Instance closed unexpectedly with code \\"null\\" and signal \\"SIGILL\\"
The Process Exited with SIGILL, which mean illegal instruction, which is commonly thrown in mongodb 5.0+ when not having AVX available on the CPU"
`;

exports[`MongodbInstance test events closeHandler() should emit "instanceError" with non-0 or signal 1`] = `"Instance closed unexpectedly with code \\"1\\" and signal \\"null\\""`;

exports[`MongodbInstance test events closeHandler() should emit "instanceError" with non-0 or signal 2`] = `"Instance closed unexpectedly with code \\"null\\" and signal \\"SIG\\""`;

exports[`MongodbInstance test events stdoutHandler() should emit "instanceError" when "aborting after" is found 1`] = `"Mongod internal error (invariant() failure)"`;

exports[`MongodbInstance test events stdoutHandler() should emit "instanceError" when "excepetion in initAndListen" is thrown DBException in initAndListen 1`] = `
"Instance Failed to start with \\"DBException in initAndListen\\". Original Error:
Location18656: Cannot start server with an unknown storage engine: ephemeralForTest"
`;

exports[`MongodbInstance test events stdoutHandler() should emit "instanceError" when "excepetion in initAndListen" is thrown DbPathInUse (Not a directory) 1`] = `
"Instance Failed to start with \\"DBPathInUse\\". Original Error:
Unable to create/open the lock file: /dev/null/mongod.lock (Not a directory). Ensure the user executing mongod is the owner of the lock file and has the appropriate permissions. Also make sure that another mongod instance is not already running on the /dev/null directory, terminating"
`;

exports[`MongodbInstance test events stdoutHandler() should emit "instanceError" when "excepetion in initAndListen" is thrown DbPathInUse (already running) 1`] = `
"Instance Failed to start with \\"DBPathInUse\\". Original Error:
Unable to lock the lock file: /tmp/hellodb/mongod.lock (Resource temporarily unavailable). Another mongod instance is already running on the /tmp/hellodb directory, terminating"
`;

exports[`MongodbInstance test events stdoutHandler() should emit "instanceError" when "excepetion in initAndListen" is thrown Location28596 1`] = `
"Instance Failed to start with \\"Location28596\\". Original Error:
Unable to determine status of lock file in the data directory /root: boost::filesystem::status: Permission denied: \\"/root/mongod.lock\\", terminating"
`;

exports[`MongodbInstance test events stdoutHandler() should emit "instanceError" when "excepetion in initAndListen" is thrown NonExistentPath 1`] = `
"Instance Failed to start with \\"NonExistentPath\\". Original Error:
Data directory /tmp/hello not found. Create the missing directory or specify another path using (1) the --dbpath command line option, or (2) by adding the 'storage.dbPath' option in the configuration file., terminating"
`;

exports[`MongodbInstance test events stdoutHandler() should emit "instanceError" when curl-open-ssl-3 is not found 1`] = `
"libcurl3 is not available on your system. Mongod requires it and cannot be started without it.
You should manually install libcurl3 or try to use an newer version of MongoDB"
`;

exports[`MongodbInstance test events stdoutHandler() should emit "instanceError" when curl-open-ssl-4 is not found 1`] = `
"libcurl4 is not available on your system. Mongod requires it and cannot be started without it.
You need to manually install libcurl4"
`;

exports[`MongodbInstance test events stdoutHandler() should emit "instanceError" when port is already in use 1`] = `"Port \\"1001\\" already in use"`;
